--- a/maximum-awesome/tmux.conf
+++ b/maximum-awesome/tmux.conf
@@ -41,6 +41,10 @@ bind-key l select-pane -R
 # bind -n C-\ run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)vim$' && tmux send-keys 'C-\\') || tmux select-pane -l"
 # bind C-l send-keys 'C-l'
 
+# split pane short keys
+bind - split-window -c "#{pane_current_path}"
+bind \ split-window -h -c "#{pane_current_path}"
+
 bind-key C-o rotate-window
 
 bind-key + select-layout main-horizontal
